<resources>
    <string name="app_name">Uncle John Pizzas</string>
    <string name="price">$ %s</string>
    <string name="label_create_your_pizza">Create your pizza</string>
    <string name="label_size_crust_toppings">Size, Crust, Toppings</string>
    <string name="placeholder_price_10">$10.00</string>
    <string name="label_choose_your_size">Choose Your</string>
    <string name="chip_text_small">Small</string>
    <string name="chip_text_medium">Medium</string>
    <string name="chip_text_large">Large</string>
    <string name="label_next">Next</string>
    <string name="cd_pizza_image">Pizza image</string>
    <string name="cd_inner_circle">Inner circle</string>
    <string name="cd_outer_circle">Outer circle</string>
    <string name="chip_text_thick">Thick</string>
    <string name="chip_text_thin">Thin</string>
    <string name="label_choose_your_crust">Choose Your crust</string>
    <string name="placeholder_price_12">$12.00</string>
    <string name="label_place_order">Place Order</string>
    <string name="placeholder_cashback">10% Cashback Applied</string>
    <string name="placeholder_price_14_50">$14.50</string>
    <string name="placeholder_card_number">....0145</string>
    <string name="label_visa">VISA</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_contactless_delivery">Contactless Delivery:</string>
    <string name="label_contactless_delivery_message">Rider will place order at your door</string>
    <string name="label_add_delivery_instruction">Add Delivery Instruction</string>
    <string name="placeholder_address">3728 Brand Road, Swift Current</string>
    <string name="label_address_type">Home</string>
    <string name="label_delivery_address">Delivery Address</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_order_details">Order Details</string>
    <string name="label_ordered_on">ordered on</string>
    <string name="placeholder_14_feb">14 Feb</string>
    <string name="label_invoice">Invoice#</string>
    <string name="placeholder_invoice_number">#15569</string>
    <string name="label_total_due">Total due</string>
    <string name="placeholder_14_50">$14.50</string>
    <string name="label_earned_cashback">Earned Cashback!</string>
    <string name="placeholder_1_45">+ $1.45</string>
    <string name="label_confirm_pizza">Confirm Pizza</string>
    <string name="label_total">Total:</string>
    <string name="label_order_summary">Order Summary</string>
    <string name="label_custom_pizza">custom pizza</string>
    <string name="label_check_your">Check your</string>
    <string name="label_choose_up_to_7_toppings">Choose up to </string>
    <string name="label_done">Done</string>
</resources>